tests/should_fail/unmatched_paren.nds
-- Missing closing paren in expression.
set x to (1 + 2
